--- a/src/app.scss
+++ b/src/app.scss
@@ -10,6 +10,13 @@ body {
     margin: 0
 }
 
+.user-form {
+    max-width: 600px;
+    margin: auto;
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
+
 .topnav {
     overflow: hidden;
     background-color: #333;
@@ -26,11 +33,6 @@ body {
 
 .bars {
     float: right;
-}
-
-.topnav a:hover {
-    background-color: #ddd;
-    color: black;
 }
 
 .active {
