[ADD] Profile + moved logout

--- a/src/app.scss
+++ b/src/app.scss
@@ -10,6 +10,18 @@ body {
     margin: 0
 }
 
+.user-info-card {
+    background-color: #fff;
+    border-radius: 4px;
+    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
+    padding: 1.25rem;
+    width: 90%;
+    margin: auto;
+    margin-top: 5vh;
+    display: flex;
+    justify-content: space-between;
+}
+
 .user-form {
     max-width: 600px;
     margin: auto;
