--- a/src/app.scss
+++ b/src/app.scss
@@ -10,6 +10,70 @@ body {
     margin: 0
 }
 
+.score-input {
+    max-width: 50px
+}
+
+.score-summary {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1rem
+}
+
+.checkbox-gabo {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+}
+
+.game-container {
+    display: flex;
+    width: 100vw;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.gamer-card-container {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+    align-items: center;
+}
+
+.create-game {
+    margin: 0 auto;
+    width: 100%;
+    padding: 1rem;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.search-user {
+    max-width: 600px;
+}
+
+.search-user-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.user-mini-card {
+    margin: 0 auto;
+    width: 100%;
+    max-width: 600px;
+    padding: 1rem;
+    background-color: #fff;
+    border-radius: 4px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1), 0 0 0 1px rgba(0, 0, 0, 0.1);
+}
+
 .user-info-card {
     background-color: #fff;
     border-radius: 4px;
@@ -50,4 +114,11 @@ body {
 .active {
     background-color: #04aa6d;
     color: white;
+}
+
+.stats-sum {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-top: 1rem;
 }
