[ADD] replay button and some style for the game over screen

--- a/src/app.scss
+++ b/src/app.scss
@@ -61,6 +61,10 @@ body {
     justify-content: center;
 }
 
+.sumTable {
+    width: 100%;
+}
+
 .user-mini-card {
     margin: 0 auto;
     width: 100%;
