--- a/src/app.scss
+++ b/src/app.scss
@@ -10,6 +10,12 @@ body {
     margin: 0
 }
 
+.centered-title {
+    margin: 0 auto;
+    width: 100%;
+    max-width: 600px;
+}
+
 .score-input {
     max-width: 50px
 }
