[ADD] guest creation

--- a/src/app.scss
+++ b/src/app.scss
@@ -10,6 +10,11 @@ body {
     margin: 0
 }
 
+.otp {
+    margin-top: 20px;
+    margin-left: 20px;
+}
+
 .centered-title {
     margin: 0 auto;
     width: 100%;
